<resources>
    <string name="app_name">Desafio3</string>
    <string name="spiderman_marvel">Spiderman Marvel®</string>
    <string name="emaill">Emaill</string>
    <string name="welcome_to_marvel">Welcome to Marvel HQ\'s</string>
    <string name="senha">Password</string>
    <string name="lembrar">Remember</string>
    <string name="log_in">Log in</string>
    <string name="criar_conta">Create account</string>
    <string name="registrar">Register</string>
    <string name="nome">Name</string>
    <string name="salvar">Save</string>
    <string name="title_activity_lista_revistas">ListaRevistasActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="price">Price:</string>
    <string name="published">Published:</string>
    <string name="pages">Pages:</string>

    <string name="campo_obrigatorio">Field %1$s required</string>
</resources>